# src/routes/v2/users/Email.ts
@@ -1,5 +1,8 @@
 import * as express from "express";
-import { SpanContext } from "opentracing";
+import {
+    AccountAlreadyExistsError,
+    MailFormatError
+} from "@clippic/clippic-errors";
 import {
     Body,
     Controller,
@@ -13,21 +16,20 @@ import {
     Security,
     Tags
 } from "tsoa";
-
 import {
     checkJWTAuthenticationSession,
     checkJWTAuthenticationUserId,
     getTraceContext,
     getTraceId
 } from "../../../classes/Common";
-import { UserQueries } from "../../../database/query/UserQueries";
+import { GetEmailResponse } from "../../../models/email/GetEmailResponse";
+import { PutEmailRequest } from "../../../models/email/PutEmailRequest";
+import { PutEmailResponse } from "../../../models/email/PutEmailResponse";
 import { RequestTracing } from "../../../models/RequestTracing";
+import { SpanContext } from "opentracing";
 import { User } from "../../../models/User";
-import {GetEmailResponse} from "../../../models/email/GetEmailResponse";
-import {PutEmailRequest} from "../../../models/email/PutEmailRequest";
-import {PutEmailResponse} from "../../../models/email/PutEmailResponse";
-import {AccountAlreadyExistsError, MailFormatError} from "../../../../../clippic-errors";
-import {validateEmail} from "../../../classes/Mailer";
+import { UserQueries } from "../../../database/query/UserQueries";
+import { validateEmail } from "../../../classes/Mailer";
 
 @Route("/users/v2/email")
 export class EmailController extends Controller {
@@ -41,8 +43,8 @@ export class EmailController extends Controller {
 
     private user: User = {};
 
-    private async getUsersSalt() {
-        const result = await this.db.doQuery(this.parentSpanContext, this.db.GetUsersSalt, this.user.id);
+    private async getUsersSession() {
+        const result = await this.db.doQuery(this.parentSpanContext, this.db.GetUsersSession, this.user.id);
         this.user = Object.assign(this.user, result);
     }
 
@@ -67,8 +69,8 @@ export class EmailController extends Controller {
         // check if user is allowed for this url
         checkJWTAuthenticationUserId(this.req, this.user);
 
-        // get salt from database
-        await this.getUsersSalt();
+        // get session from database
+        await this.getUsersSession();
 
         // check if user has correct session variable
         checkJWTAuthenticationSession(this.req, this.user);
