# src/routes/v2/users/Surname.ts
@@ -1,5 +1,4 @@
 import * as express from "express";
-import { SpanContext } from "opentracing";
 import {
     Body,
     Controller,
@@ -19,12 +18,13 @@ import {
     getTraceContext,
     getTraceId
 } from "../../../classes/Common";
-import { UserQueries } from "../../../database/query/UserQueries";
-import { RequestTracing } from "../../../models/RequestTracing";
-import { User } from "../../../models/User";
 import { GetSurnameResponse } from "../../../models/surname/GetSurnameResponse";
 import { PutSurnameRequest } from "../../../models/surname/PutSurnameRequest";
 import { PutSurnameResponse } from "../../../models/surname/PutSurnameResponse";
+import { RequestTracing } from "../../../models/RequestTracing";
+import { SpanContext } from "opentracing";
+import { User } from "../../../models/User";
+import { UserQueries } from "../../../database/query/UserQueries";
 
 @Route("/users/v2/surname")
 export class SurnameController extends Controller {
@@ -38,8 +38,8 @@ export class SurnameController extends Controller {
 
     private user: User = {};
 
-    private async getUsersSalt() {
-        const result = await this.db.doQuery(this.parentSpanContext, this.db.GetUsersSalt, this.user.id);
+    private async getUsersSession() {
+        const result = await this.db.doQuery(this.parentSpanContext, this.db.GetUsersSession, this.user.id);
         this.user = Object.assign(this.user, result);
     }
 
@@ -60,8 +60,8 @@ export class SurnameController extends Controller {
         // check if user is allowed for this url
         checkJWTAuthenticationUserId(this.req, this.user);
 
-        // get salt from database
-        await this.getUsersSalt();
+        // get session from database
+        await this.getUsersSession();
 
         // check if user has correct session variable
         checkJWTAuthenticationSession(this.req, this.user);
